# eir

./: .gitignore  .gitmodules  LICENCE  Makefile  README  README.md  bot.cpp  config.h  configure.ac  eir.conf.example  message.h  pimpl.h  settings.mk.in
bs/: target_module.mk
bsextra/: target_module.mk
doc/: build.mk  eir.conf.example
doc/bantracker/: operators-guide.txt  schema-pg.sql  schema-sqlite3.sql
docs/bantracker/: configuration-guide.txt  schema-mysql.sql  schema-sqlite3.sql
libjson/: build.mk
modules/: build.mk  channel.cpp  config.cpp  die.cpp  dump_isupport.cpp  echo.cpp  help.cpp  hostmask_privilege.cpp  join_channels.cpp  log_channel.cpp  log_stderr.cpp  mode.cpp  nickserv.cpp  ping.cpp  print_notice.cpp  privileges.cpp  snote.cpp  userlist.cpp  voicebot.cpp  whoami.cpp
modules/core/: channel.cpp  ctcp.cpp  die.cpp  error.cpp  join_channels.cpp  mode.cpp  nickserv.cpp  oper.cpp  ping.cpp
modules/logs/: channel.cpp
modules/perl/: build.mk  definitions.h  extra.mk  perl.cpp  stupid_perl_workarounds.h
modules/perl/api/: HashWrappers.cpp  HashWrappers.h  api.xs  capabilities.xs  clients.xs  handlers.xs  helpers.xs  logger.xs  messages.xs  perl_helpers.cpp  perl_helpers.hh  storage.xs  typemap  value.xs  value_wrapper.cpp  value_wrapper.hh
modules/perl/lib/: Eir.pm  init.pl
modules/privs/: account.cpp  hostmask.cpp
modules/storage/: extra.mk  json.cpp
paludis/util/: attributes.hh  build.mk  destringify.cc  destringify.hh  exception.cc  exception.hh  instantiation_policy-impl.hh  instantiation_policy.hh  join.hh  member_iterator-fwd.hh  member_iterator-impl.hh  member_iterator.hh  mutex-fwd.hh  mutex.cc  mutex.hh  operators.hh  private_implementation_pattern-impl.hh  private_implementation_pattern.hh  save.hh  stringify.hh  tokeniser.cc  tokeniser.hh  wrapped_forward_iterator-fwd.hh  wrapped_forward_iterator-impl.hh  wrapped_forward_iterator.hh
scripts/: bantracker.pl  eir_cap_sasl.pl  patchlist.pl
src/: bot.cpp  bot.h  bot_command.cpp  build.mk  capability.cpp  capability.h  client.cpp  client.h  command.cpp  command.h  eir.h  event.cpp  event.h  event_internal.h  exceptions.cpp  exceptions.h  handler.h  help.h  logger.cpp  logger.h  main.cpp  match.cpp  match.h  match_internal.h  message.cpp  message.h  modload.cpp  modules.cpp  modules.h  privilege.cpp  privilege.h  server.cpp  server.h  settings.cpp  settings.h  singleton.h  storage.cpp  storage.h  string_util.cpp  string_util.h  (+5 more)
(+2 files in other folders)
